# Tims-PackageServer

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  app.coffee  askama.toml  authReader.coffee  build.rs  package-lock.json  package.json  packageListReader.coffee  server.sh  streamHasher.coffee  versionComparator.coffee  versionComparator.jison
.github/: dependabot.yml
.github/workflows/: build.yml  codestyle.yml  release.yml  rust-clippy.yml  test.yml
assets/locales/: core.ftl
assets/locales/de-DE/: main.ftl
assets/locales/en-US/: main.ftl
assets/static/: fuse.min.js  main.css  main.js
assets/views/: about.html  main.xslt  packageUpdateServer.xml
assets/views/source/: source.html
locales/: de.json
src/: built_info.rs  main.rs  nom.rs  source_files.rs
src/auth/: auth_json_reader.rs  mod.rs  password.rs  types.rs
src/auth/acl/: expression.rs  mod.rs  relation.rs  ruleset.rs  v.rs
src/auth/hashers/: bcrypt.rs  double_bcrypt.rs  mod.rs
src/fluent/: macros.rs  mod.rs
src/http/: error.rs  helpers.rs  mod.rs
src/http/header/: accept_language.rs  mod.rs
src/http/routes/: about.rs  assets.rs  download.rs  health.rs  login.rs  main_xslt.rs  mod.rs  package_update_xml.rs  source_code.rs
src/package/: list_reader.rs  mod.rs  watcher.rs  xml.rs  xml_reader.rs
src/templates/: filters.rs  mod.rs
src/version/: mod.rs  suffix.rs  suffix_type.rs
templates/: main.xslt
templates/source/: source.txt
tests/: auth.json  startup.hurl  test.hurl
tests/be.bastelstu.packages.test/: 1.0.0.xml
tests/be.bastelstu.packages.test2/: 1.0.0.xml  1.0.1.xml
views/: main.handlebars
views/source/: html.handlebars  txt.handlebars
