[package]
name = "tims-package-server"
version = "10.3.5"
license = "AGPL-3.0-or-later"
authors = ["Maximilian Mader", "Tim Düsterhus"]

build = "build.rs"
edition = "2021"
resolver = "2"

[dependencies]
actix-files = "0.6.2"
actix-web = { version = "4.3.1", default-features = false, features = [ "macros" ] }
actix-web-httpauth = "0.8.0"
arc-swap = "1.6.0"
askama = { version = "0.12.0", default-features = false }
askama_actix = "0.14.0"
base64 = { version = "0.21.2", default-features = false }
bcrypt = "0.14.0"
config = "0.13.3"
env_logger = "0.10.0"
fluent-langneg = { version = "0.13.0", default-features = false }
fluent-templates = { version = "0.8.0", default-features = false }
futures = { version = "0.3.28", default-features = false, features = [ "async-await" ] }
futures-util = { version = "0.3.28", default-features = false }
humantime = "2.1.0"
language-tags = "0.3.2"
libc = "0.2.144"
log = "0.4.17"
mime = "0.3.17"
mime_guess = { version = "2.0.4", default-features = false }
nom = { version = "7.1.3", default-features = false, features = [ "alloc" ] }
notify = "4.0.17"
once_cell = { version = "1.18.0", default-features = false }
phf = "0.11.1"
regex = { version = "1.8.4", default-features = false }
roxmltree = "0.18.0"
serde = { version = "1.0.163", features = [ "derive" ] }
serde_json = { version = "1.0.96", default-features = false }
sha2 = "0.10.6"
tar = { version = "0.4.38", default-features = false }
unic-langid = "0.9.1"
url = { version = "2.4.0", features = ["serde"] }

[build-dependencies]
base64 = "0.21.2"
built = { version = "0.6.0", features = [ "git2" ] }
cargo-license = "0.5.1"
ignore = "0.4.20"
phf_codegen = "0.11.1"
sha2 = "0.10.6"

[profile.release]
panic = "abort"
lto = true

