[package]
name = "tims-package-server"
version = "10.3.8"
license = "AGPL-3.0-or-later"
authors = ["Maximilian Mader", "Tim Düsterhus"]

build = "build.rs"
edition = "2021"
resolver = "2"

[dependencies]
actix-files = "0.6.2"
actix-web = { version = "4.4.1", default-features = false, features = [ "macros" ] }
actix-web-httpauth = "0.8.1"
arc-swap = "1.6.0"
askama = { version = "0.12.1", default-features = false }
askama_actix = "0.14.0"
base64 = { version = "0.21.5", default-features = false }
bcrypt = "0.15.0"
config = "0.13.4"
env_logger = "0.10.1"
fluent-langneg = { version = "0.13.0", default-features = false }
fluent-templates = { version = "0.8.0", default-features = false }
futures = { version = "0.3.30", default-features = false, features = [ "async-await" ] }
futures-util = { version = "0.3.28", default-features = false }
humantime = "2.1.0"
language-tags = "0.3.2"
libc = "0.2.153"
log = "0.4.20"
mime = "0.3.17"
mime_guess = { version = "2.0.4", default-features = false }
nom = { version = "7.1.3", default-features = false, features = [ "alloc" ] }
notify = "4.0.17"
once_cell = { version = "1.19.0", default-features = false }
phf = "0.11.2"
regex = { version = "1.10.2", default-features = false }
roxmltree = "0.19.0"
serde = { version = "1.0.194", features = [ "derive" ] }
serde_json = { version = "1.0.109", default-features = false }
sha2 = "0.10.8"
tar = { version = "0.4.40", default-features = false }
unic-langid = "0.9.4"
url = { version = "2.5.0", features = ["serde"] }

[build-dependencies]
base64 = "0.21.5"
built = { version = "0.7.1", features = [ "git2" ] }
cargo-license = "0.5.1"
ignore = "0.4.21"
phf_codegen = "0.11.2"
sha2 = "0.10.8"

[profile.release]
panic = "abort"
lto = true

