[package]
name = "tims-package-server"
version = "10.3.15"
license = "AGPL-3.0-or-later"
authors = ["Maximilian Mader", "Tim Düsterhus"]

build = "build.rs"
edition = "2021"
resolver = "2"

[dependencies]
actix-files = "0.6.6"
actix-web = { version = "4.9.0", default-features = false, features = [ "macros" ] }
actix-web-httpauth = "0.8.2"
arc-swap = "1.7.1"
askama = { version = "0.12.1", default-features = false }
askama_actix = "0.14.0"
base64 = { version = "0.22.1", default-features = false }
bcrypt = "0.17.0"
config = "0.15.11"
env_logger = "0.11.6"
fluent-langneg = { version = "0.13.0", default-features = false }
fluent-templates = { version = "0.9.4", default-features = false , features = [ "use-ignore" ]}
futures = { version = "0.3.31", default-features = false, features = [ "async-await" ] }
futures-util = { version = "0.3.31", default-features = false }
humantime = "2.2.0"
language-tags = "0.3.2"
libc = "0.2.172"
log = "0.4.27"
mime = "0.3.17"
mime_guess = { version = "2.0.5", default-features = false }
nom = { version = "8.0.0", default-features = false, features = [ "alloc" ] }
notify = "4.0.17"
once_cell = { version = "1.20.2", default-features = false }
phf = "0.11.3"
regex = { version = "1.11.1", default-features = false, features = [ "unicode" ] }
roxmltree = "0.20.0"
serde = { version = "1.0.219", features = [ "derive" ] }
serde_json = { version = "1.0.140", default-features = false }
sha2 = "0.10.8"
tar = { version = "0.4.44", default-features = false }
unic-langid = "0.9.5"
url = { version = "2.5.4", features = ["serde"] }

[build-dependencies]
base64 = "0.22.1"
built = { version = "0.7.7", features = [ "git2" ] }
cargo-license = "0.6.1"
ignore = "0.4.23"
phf_codegen = "0.11.3"
sha2 = "0.10.8"

[profile.release]
panic = "abort"
lto = true

